PPv09d-b20140603-r2 -Ventana Abono de Gasto (Correccion de errores)

--- a/WebContent/abono.xhtml
+++ b/WebContent/abono.xhtml
@@ -552,7 +552,7 @@
 									<h:panelGrid columns="3" cellpadding="1">
 										<h:outputText value="Fecha del devengo: "/>
 										<p:inputMask id="FEDEVEBP" value="#{GestorAbonos.sFEDEVEBP}" mask="99/99/9999" size="10" maxlength="10"/>
-										<p:commandButton icon="ui-icon-clock" update="FEDEVEBA" actionListener="#{GestorAbonos.hoyFEDEVEBP}"/>
+										<p:commandButton icon="ui-icon-clock" update="FEDEVEBP" actionListener="#{GestorAbonos.hoyFEDEVEBP}"/>
 									</h:panelGrid>
 								</p:panel>
 								<p:panel>
