--- a/WebContent/bloqueoactivos.xhtml
+++ b/WebContent/bloqueoactivos.xhtml
@@ -33,7 +33,14 @@
 						<p:fieldset legend="Acciones">
 							<h:panelGrid columns="3" cellpadding="5">
 
-								<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscar, activos, panel" actionListener="#{GestorBloqueosActivo.limpiarPlantilla}" />	
+								<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscar, activos, panel, COACCI" actionListener="#{GestorBloqueosActivo.limpiarPlantilla}" />
+								
+								<p:commandButton value="Registrar Cambio" update="msgs, popup, panelBloqueo" action="#{GestorBloqueosActivo.modificarBloqueo}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()" />
+								<p:selectOneRadio id="COACCI" value="#{GestorBloqueosActivo.sAccion}">
+									<f:selectItem itemLabel="Bloquear" itemValue="B"/>
+									<f:selectItem itemLabel="Modificación" itemValue="M"/>
+									<f:selectItem itemLabel="Desbloquear" itemValue="D"/>
+								</p:selectOneRadio>	
 
 							</h:panelGrid>
 						</p:fieldset>
@@ -72,7 +79,7 @@
 													<h:outputText for="COACESB" value="Activo: " />
 													<p:inputText id="COACESB" value="#{GestorBloqueosActivo.sCOACESB}" size="10" maxlength="9"/>
 
-													<p:commandButton value="Cargar" update="ESTADOBLOQUEO, FECHABLOQUEO, msgs, popup" actionListener="#{GestorBloqueosActivo.cargarEstado}" onstart="statusDialog.show()" oncomplete="statusDialog.hide(); dlgTabla.show()"/>	
+													<p:commandButton value="Cargar" update="msgs, popup, panelBloqueo" actionListener="#{GestorBloqueosActivo.cargarEstado}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()"/>	
 												</h:panelGrid>
 											</p:panel>
 										<p:commandButton value="Buscar Activo" update="COACESB, form:activos" oncomplete="dlgBuscar.show()"/>
@@ -83,31 +90,31 @@
 							</h:panelGrid>
 						</p:fieldset>
 
-						<p:fieldset legend="Bloqueo" id="panelEjecucion">
-								<h:panelGrid columns="3" cellpadding="3">
+						<p:fieldset legend="Bloqueo" id="panelBloqueo">
+								<h:panelGrid columns="4" cellpadding="3">
+
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+										<h:outputText for="COACES" value="Activo: " />
+										<p:inputText id="COACES" value="#{GestorBloqueosActivo.sCOACES}" size="9" disabled="true"/>
+									</h:panelGrid>
+								</p:panel>
 
 								<p:panel>
 									<h:panelGrid columns="2" cellpadding="5">
 										<h:outputText for="ESTADOBLOQUEO" value="Estado del activo: " />
-										<p:inputText id="ESTADOBLOQUEO" value="#{GestorBloqueosActivo.sEstado}" size="15" disabled="true"/>
+										<p:inputText id="ESTADOBLOQUEO" value="#{GestorBloqueosActivo.sEstadoD}" size="15" disabled="true"/>
 									</h:panelGrid>
 								</p:panel>
 
 								<p:panel>
 									<h:panelGrid columns="3" cellpadding="5">
 										<h:outputText for="FECHABLOQUEO" value="Fecha de inicio de Bloqueo: " />
-										<p:inputMask id="FECHABLOQUEO" value="#{GestorBloqueosActivo.sFechaActivacion}" mask="99/99/9999" size="10" maxlength="10" disabled="#{GestorBloqueosActivo.bBloqueo}"/>
+										<p:inputMask id="FECHABLOQUEO" value="#{GestorBloqueosActivo.sFechaActivacion}" mask="99/99/9999" size="10" maxlength="10"/>
 
-										<p:commandButton icon="ui-icon-clock" update="FECHABLOQUEO" actionListener="#{GestorBloqueosActivo.hoyFechaActivacion}" disabled="#{GestorBloqueosActivo.bBloqueo}"/>
+										<p:commandButton icon="ui-icon-clock" update="FECHABLOQUEO" actionListener="#{GestorBloqueosActivo.hoyFechaActivacion}"/>
 									</h:panelGrid>
 								</p:panel>
-
-								<h:panelGrid columns="1" cellpadding="3">
-									<p:commandButton value="Bloquear" id="BotBLOQUEAR" update="FECHABLOQUEO, BotBLOQUEAR, BotDESBLOQUEAR, BotMODIFICAR" action="#{GestorBloqueosActivo.bloquearActivo}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()" disabled="#{GestorBloqueosActivo.bBloqueo}"/>
-									<p:commandButton value="Desbloquear" id="BotDESBLOQUEAR" update="FECHABLOQUEO, BotBLOQUEAR, BotDESBLOQUEAR, BotMODIFICAR" action="#{GestorBloqueosActivo.desbloquearActivo}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()" disabled="#{GestorBloqueosActivo.bDesbloqueo}"/>
-									<p:commandButton value="Modificar" id="BotMODIFICAR" update="FECHABLOQUEO" action="#{GestorBloqueosActivo.modificarBloqueoActivo}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()" disabled="#{GestorBloqueosActivo.bDesbloqueo}"/>
-								</h:panelGrid>
-
 							</h:panelGrid>
 						</p:fieldset>
 
@@ -201,45 +208,18 @@
 
 														<p:column>
 															<f:facet name="header">
-																<h:outputText value="Provinicia" />
+																<h:outputText value="Estado" />
 															</f:facet>
-															<h:outputText value="#{activo.NOPRAC}" />
+															<h:outputText value="#{activo.sEstado}" />
 														</p:column>
 
 														<p:column>
 															<f:facet name="header">
-																<h:outputText value="Municipio" />
+																<h:outputText value="Fecha de Activación" />
 															</f:facet>
-															<h:outputText value="#{activo.NOMUIN}" />
+															<h:outputText value="#{activo.sFechaActivacion}" />
 														</p:column>
 
-														<p:column>
-															<f:facet name="header">
-																<h:outputText value="Vía" />
-															</f:facet>
-															<h:outputText value="#{activo.NOVIAS}" />
-														</p:column>
-
-														<p:column>
-															<f:facet name="header">
-																<h:outputText value="Portal" />
-															</f:facet>
-															<h:outputText value="#{activo.NUPOAC}" />
-														</p:column>
-
-														<p:column>
-															<f:facet name="header">
-																<h:outputText value="Piso" />
-															</f:facet>
-															<h:outputText value="#{activo.NUPIAC}" />
-														</p:column>
-
-														<p:column>
-															<f:facet name="header">
-																<h:outputText value="Puerta" />
-															</f:facet>
-															<h:outputText value="#{activo.NUPUAC}" />
-														</p:column>
 
 														<f:facet name="footer">
 															<h:commandLink>
