--- a/WebContent/movimientosgastos.xhtml
+++ b/WebContent/movimientosgastos.xhtml
@@ -544,7 +544,7 @@
 							</h:panelGrid>
 						</p:fieldset>
 					</p:dialog>
-					<p:dialog header="Gastos abonables del Activo: " widgetVar="dlgTablaGastosActivo" resizable="false">
+					<p:dialog header="Gastos emitidos del Activo: " widgetVar="dlgTablaGastosActivo" resizable="false">
 						<p:contextMenu for="gastosactivo">
 							<p:menuitem value="Seleccionar" update="form:popup, form:msgs, form:panelDatosGasto, form:NOTA" icon="ui-icon-check" actionListener="#{GestorMovimientosGastos.seleccionarGastoActivo}" oncomplete="dlgTablaGastosActivo.hide();  dlgBuscarGastosActivo.hide();"/>
 						</p:contextMenu>
@@ -591,7 +591,7 @@
 							</p:column>
 						</p:dataTable>
 					</p:dialog>
-					<p:dialog header="Buscar Gastos abonables en la Provisión: " widgetVar="dlgBuscarGastosProvision" resizable="false">
+					<p:dialog header="Buscar Gastos emitidos en la Provisión: " widgetVar="dlgBuscarGastosProvision" resizable="false">
 						<p:fieldset legend="Criterios de Búsqueda">
 							<h:panelGrid columns="1" cellpadding="5">
 								<p:panel id="panelBuscarGastosProvision" >
