--- a/WebContent/registracuota.xhtml
+++ b/WebContent/registracuota.xhtml
@@ -31,8 +31,8 @@
 
 						<p:fieldset legend="Acciones">
 							<h:panelGrid columns="3" cellpadding="5">
-								<p:commandButton value="Limpiar Plantilla" update="panel" actionListener="#{GestorCuotas.limpiarPlantilla}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
-								<p:commandButton value="Alta" update="panel, popup, msgs" actionListener="#{GestorCuotas.realizaAlta}"/>
+								<p:commandButton value="Limpiar Plantilla" update="panel, NOTA" actionListener="#{GestorCuotas.limpiarPlantilla}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
+								<p:commandButton value="Alta" onclick="dlgConfirmaRegistrar.show()"/>
 							</h:panelGrid>
 						</p:fieldset>
 
@@ -216,6 +216,22 @@
 							</h:panelGrid>
 						</p:panel>
 					</h:panelGrid>
+
+					<p:dialog header="Confirmación" widgetVar="dlgConfirmaRegistrar" resizable="false"> 
+						<h:panelGrid columns="1">
+							<p:panel>
+								<h:panelGrid columns="1">
+									<h:outputText value="¿Está seguro de realizar esta operación?" />
+								</h:panelGrid>
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+									<p:commandButton value="Si" icon="ui-icon-check" update="panel, popup, msgs, NOTA" actionListener="#{GestorCuotas.realizaAlta}" oncomplete="dlgConfirmaRegistrar.hide()"/>  
+									<p:commandButton value="No" type="button" icon="ui-icon-close" onclick="dlgConfirmaRegistrar.hide()"/>
+									</h:panelGrid>
+								</p:panel>
+							</p:panel>
+						</h:panelGrid>
+					</p:dialog>
 
 					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
 						<h:panelGrid columns="1" cellpadding="1">
