--- a/WebContent/gestioncuentasactivos.xhtml
+++ b/WebContent/gestioncuentasactivos.xhtml
@@ -33,8 +33,8 @@
 							<h:panelGrid columns="3" cellpadding="5">
 
 								<p:commandButton value="Limpiar Plantilla" update="panel, cuentas" actionListener="#{GestorCuentasActivos.limpiarPlantilla}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
-								<p:commandButton value="Añadir Cuenta" update="cuentas, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION, msgs, popup" actionListener="#{GestorCuentasActivos.altaCuentaActivo}" />
-								<p:commandButton value="Eliminar Cuenta" update="cuentas, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION, msgs, popup" actionListener="#{GestorCuentasActivos.bajaCuentaActivo}" />
+								<p:commandButton value="Añadir Cuenta" onclick="dlgConfirmaRegistrarA.show()" />
+								<p:commandButton value="Eliminar Cuenta" onclick="dlgConfirmaRegistrarE.show()" />
 
 							</h:panelGrid>
 						</p:fieldset>
@@ -74,7 +74,7 @@
 										<p:panel >
 											<h:panelGrid columns="4" cellpadding="5">
 												<h:outputText for="COACES" value="Activo: " />
-													<p:inputText id="COACES" value="#{GestorCuentasActivos.sCOACES}" size="9" maxlength="9">
+													<p:inputText id="COACES" value="#{GestorCuentasActivos.sCOACESB}" size="9" maxlength="9">
 													</p:inputText>
 												<p:message for="COACES" display="icon"/>
 												<p:commandButton value="Comprobar" update="msgs, popup, COACES, cuentas" actionListener="#{GestorCuentasActivos.buscaCuentas}"/>
@@ -130,14 +130,14 @@
 						<p:panel id="panelTablaCuentasActivo">
 							<h:panelGrid columns="1" cellpadding="5">
 								<p:contextMenu for="cuentas">
-									<p:menuitem value="Eliminar" update="cuentas, COACES, popup, msgs, NUCCEN, NUCCOF, NUCCDI, NUCCNT, DESCRIPCION" icon="ui-icon-check" actionListener="#{GestorCuentasActivos.bajaCuentaActivo}"/>
+									<p:menuitem value="Eliminar" onclick="dlgConfirmaRegistrarE.show()"/>
 								</p:contextMenu>
 
 								<p:dataTable id="cuentas" var="cuenta" value="#{GestorCuentasActivos.tablacuentas}" rowKey="#{cuenta.sNUCCEN}"
 															selection="#{GestorCuentasActivos.cuentaseleccionada}" selectionMode="single"
 															paginator="true" paginatorPosition="bottom" rows="10"
 															paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-															rowsPerPageTemplate="5,10,15">
+															rowsPerPageTemplate="5,10,15" lazy="true" emptyMessage="Sin registros">
 
 														<p:column>
 															<f:facet name="header">
@@ -201,6 +201,38 @@
 						</p:panel>
 					</h:panelGrid>
 
+					<p:dialog header="Confirmación" widgetVar="dlgConfirmaRegistrarA" resizable="false"> 
+						<h:panelGrid columns="1">
+							<p:panel>
+								<h:panelGrid columns="1">
+									<h:outputText value="¿Está seguro de Añadir la cuenta?" />
+								</h:panelGrid>
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+									<p:commandButton value="Si" icon="ui-icon-check" update="form:cuentas, form:PAIS, form:DCIBAN, form:NUCCEN, form:NUCCOF, form:NUCCDI, form:NUCCNT, form:DESCRIPCION, form:msgs, form:popup" actionListener="#{GestorCuentasActivos.altaCuentaActivo}" oncomplete="dlgConfirmaRegistrarA.hide()"/>  
+									<p:commandButton value="No" type="button" icon="ui-icon-close" onclick="dlgConfirmaRegistrarA.hide()"/>
+									</h:panelGrid>
+								</p:panel>
+							</p:panel>
+						</h:panelGrid>
+					</p:dialog>
+
+					<p:dialog header="Confirmación" widgetVar="dlgConfirmaRegistrarE" resizable="false"> 
+						<h:panelGrid columns="1">
+							<p:panel>
+								<h:panelGrid columns="1">
+									<h:outputText value="¿Está seguro de realizar esta operación?" />
+								</h:panelGrid>
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+									<p:commandButton value="Si" icon="ui-icon-check" update="form:cuentas, form:PAIS, form:DCIBAN, form:NUCCEN, form:NUCCOF, form:NUCCDI, form:NUCCNT, form:DESCRIPCION, form:msgs, form:popup" actionListener="#{GestorCuentasActivos.bajaCuentaActivo}" oncomplete="dlgConfirmaRegistrarE.hide()"/>  
+									<p:commandButton value="No" type="button" icon="ui-icon-close" onclick="dlgConfirmaRegistrarE.hide()"/>
+									</h:panelGrid>
+								</p:panel>
+							</p:panel>
+						</h:panelGrid>
+					</p:dialog>
+
 					<p:dialog header="Activos disponibles:" widgetVar="dlgTabla" resizable="false">
 						<p:contextMenu for="activos">
 							<p:menuitem value="Seleccionar" update="form:COACES, form:popup" icon="ui-icon-check" actionListener="#{GestorCuentasActivos.seleccionarActivo}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>
@@ -210,7 +242,7 @@
 															selection="#{GestorCuentasActivos.activoseleccionado}" selectionMode="single"
 															paginator="true" paginatorPosition="bottom" rows="10"
 															paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-															rowsPerPageTemplate="5,10,15">
+															rowsPerPageTemplate="5,10,15" lazy="true" emptyMessage="Sin registros">
 
 							<p:column headerText="Código Activo">
 								#{activo.COACES}
