--- a/WebContent/movimientoscomunidades.xhtml
+++ b/WebContent/movimientoscomunidades.xhtml
@@ -34,7 +34,7 @@
 
 								<p:commandButton value="Limpiar Plantilla" update="panel, COACCI" actionListener="#{GestorMovimientosComunidades.limpiarPlantilla}"/>
 
-								<p:commandButton value="Registrar Datos" update="panel, msgs, popup" actionListener="#{GestorMovimientosComunidades.registraDatos}"/>
+								<p:commandButton value="Registrar Datos" onclick="dlgConfirmaRegistrar.show()"/>
 
 								<p:selectOneRadio id="COACCI" value="#{GestorMovimientosComunidades.sCOACCI}">
 									<f:selectItem itemLabel="Baja" itemValue="B"/>
@@ -193,6 +193,22 @@
 
 						</h:panelGrid>
 					</p:panel>
+
+					<p:dialog header="Confirmación" widgetVar="dlgConfirmaRegistrar" resizable="false"> 
+						<h:panelGrid columns="1">
+							<p:panel>
+								<h:panelGrid columns="1">
+									<h:outputText value="¿Está seguro de realizar esta operación?" />
+								</h:panelGrid>
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+									<p:commandButton value="Si" icon="ui-icon-check" update="panel, msgs, popup" actionListener="#{GestorMovimientosComunidades.registraDatos}" oncomplete="dlgConfirmaRegistrar.hide()"/>  
+									<p:commandButton value="No" type="button" icon="ui-icon-close" onclick="dlgConfirmaRegistrar.hide()"/>
+									</h:panelGrid>
+								</p:panel>
+							</p:panel>
+						</h:panelGrid>
+					</p:dialog>
 
 					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
 						<h:panelGrid columns="1" cellpadding="1">
