--- a/WebContent/movimientosgastos.xhtml
+++ b/WebContent/movimientosgastos.xhtml
@@ -33,7 +33,7 @@
 							<h:panelGrid columns="3" cellpadding="5">
 
 								<p:commandButton value="Limpiar Plantilla" update="NUPROF, panel, form:NOTA" actionListener="#{GestorMovimientosGastos.limpiarPlantilla}" oncomplete="dlgTablaActivos.hide(); dlgBuscarActivos.hide()"/>
-								<p:commandButton value="Registrar Datos" update="panel, popup, msgs" actionListener="#{GestorMovimientosGastos.registraGasto}"/>
+								<p:commandButton value="Registrar Datos" onclick="dlgConfirmaRegistrar.show()"/>
 
 							</h:panelGrid>
 						</p:fieldset>
@@ -281,6 +281,22 @@
 							</h:panelGrid>
 						</p:panel>
 					</h:panelGrid>
+
+					<p:dialog header="Confirmación" widgetVar="dlgConfirmaRegistrar" resizable="false"> 
+						<h:panelGrid columns="1">
+							<p:panel>
+								<h:panelGrid columns="1">
+									<h:outputText value="¿Está seguro de realizar esta operación?" />
+								</h:panelGrid>
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+									<p:commandButton value="Si" icon="ui-icon-check" update="panel, popup, msgs" actionListener="#{GestorMovimientosGastos.registraGasto}" oncomplete="dlgConfirmaRegistrar.hide()"/>  
+									<p:commandButton value="No" type="button" icon="ui-icon-close" onclick="dlgConfirmaRegistrar.hide()"/>
+									</h:panelGrid>
+								</p:panel>
+							</p:panel>
+						</h:panelGrid>
+					</p:dialog>
 
 					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
 						<h:panelGrid columns="1" cellpadding="1">
