--- a/WebContent/pagocomunidad.xhtml
+++ b/WebContent/pagocomunidad.xhtml
@@ -34,7 +34,7 @@
 							<h:panelGrid columns="3" cellpadding="5">
 
 								<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panel, NOTA" actionListener="#{GestorPagosComunidad.limpiarPlantilla}" />
-								<p:commandButton value="Pagar" update="msgs, popup, panel" action="#{GestorPagosComunidad.registrarPago}" onstart="statusDialog.show()" oncomplete="statusDialog.hide()"/>	
+								<p:commandButton value="Pagar" onclick="dlgConfirmaRegistrar.show()"/>	
 
 							</h:panelGrid>
 						</p:fieldset>
@@ -281,6 +281,22 @@
 
 					</h:panelGrid>
 				</p:panel>
+
+					<p:dialog header="Confirmación" widgetVar="dlgConfirmaRegistrar" resizable="false"> 
+						<h:panelGrid columns="1">
+							<p:panel>
+								<h:panelGrid columns="1">
+									<h:outputText value="¿Está seguro de realizar esta operación?" />
+								</h:panelGrid>
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+									<p:commandButton value="Si" icon="ui-icon-check" update="msgs, popup, panel" action="#{GestorPagosComunidad.registrarPago}" onstart="statusDialog.show()" oncomplete="statusDialog.hide();dlgConfirmaRegistrar.hide()"/>  
+									<p:commandButton value="No" type="button" icon="ui-icon-close" onclick="dlgConfirmaRegistrar.hide()"/>
+									</h:panelGrid>
+								</p:panel>
+							</p:panel>
+						</h:panelGrid>
+					</p:dialog>
 
 					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
 					<h:panelGrid columns="1" cellpadding="1">
