--- a/WebContent/registracomunidad.xhtml
+++ b/WebContent/registracomunidad.xhtml
@@ -35,7 +35,7 @@
 
 								<p:commandButton value="Limpiar Plantilla" update="panel, panelBuscarActivos, panelBuscarReferencia, NOTA" actionListener="#{GestorComunidades.limpiarPlantilla}"/>
 
-								<p:commandButton value="Alta" update="panel, popup, msgs" actionListener="#{GestorComunidades.realizaAlta}"/>
+								<p:commandButton value="Alta" onclick="dlgConfirmaRegistrar.show()"/>
 
 							</h:panelGrid>
 						</p:fieldset>
@@ -184,6 +184,22 @@
 							</h:panelGrid>
 						</p:panel>
 					</h:panelGrid>
+
+					<p:dialog header="Confirmación" widgetVar="dlgConfirmaRegistrar" resizable="false"> 
+						<h:panelGrid columns="1">
+							<p:panel>
+								<h:panelGrid columns="1">
+									<h:outputText value="¿Está seguro de realizar esta operación?" />
+								</h:panelGrid>
+								<p:panel>
+									<h:panelGrid columns="2" cellpadding="5">
+									<p:commandButton value="Si" icon="ui-icon-check" update="panel, popup, msgs, NOTA" actionListener="#{GestorComunidades.realizaAlta}" oncomplete="dlgConfirmaRegistrar.hide()"/>  
+									<p:commandButton value="No" type="button" icon="ui-icon-close" onclick="dlgConfirmaRegistrar.hide()"/>
+									</h:panelGrid>
+								</p:panel>
+							</p:panel>
+						</h:panelGrid>
+					</p:dialog>
 
 					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
 					<h:panelGrid columns="1" cellpadding="1">
