PPv09d-b20140611-r1 -Inclusión del nuevo campo FETIFI en el objeto Activo.

--- a/WebContent/detallesactivo.xhtml
+++ b/WebContent/detallesactivo.xhtml
@@ -437,6 +437,9 @@
 									<p:fieldset legend="Auto">
 										<h:panelGrid columns="2" cellpadding="5">
 
+											<h:outputText for="FETIFI" value="Fecha de diligencia: " />
+											<p:inputText id="FETIFI" value="#{GestorDetallesActivo.sFETIFI}" size="9" maxlength="9" disabled="true"/>
+
 											<h:outputText for="FEREAC" value="Fecha de baja del activo: " />
 											<p:inputText id="FEREAC" value="#{GestorDetallesActivo.sFEREAC}" size="9" maxlength="9" disabled="true"/>
 
