PPv09d-b20140623-r1 -Cuentas: Ahora una cuenta puede estar asociada a varias comunidades y/o activos. -GestorIngresos: Implementacion Parcial

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -51,6 +51,8 @@
 								url="listaprovisiones.xhtml" icon="ui-icon-search" />
 							<p:menuitem value="Cerrar" 
 								url="cierraprovisiones.xhtml" icon="ui-icon-check" />
+							<p:menuitem value="Ingresos de importes" 
+								url="ingresaimportes.xhtml" icon="ui-icon-check" />
 						</p:submenu>
 
 							<p:submenu label="Comunidades">
